--- a/paper/manuscript/misc/ref.bib
+++ b/paper/manuscript/misc/ref.bib
@@ -6,3 +6,65 @@
   year = {2021},
   url = {https://www.R-project.org/},
 }
+
+@Book{masspackage,
+    title = {Modern Applied Statistics with S},
+    author = {W. N. Venables and B. D. Ripley},
+    publisher = {Springer},
+    edition = {Fourth},
+    address = {New York},
+    year = {2002},
+    note = {ISBN 0-387-95457-0},
+    url = {https://www.stats.ox.ac.uk/pub/MASS4/},
+  }
+
+@Manual{rstudio,
+    title = {RStudio: Integrated Development Environment for R},
+    author = {{RStudio Team}},
+    organization = {RStudio, PBC},
+    address = {Boston, MA},
+    year = {2022},
+    url = {http://www.rstudio.com/},
+  }
+
+@Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+
+@Article{effectsize,
+    title = {{e}ffectsize: Estimation of Effect Size Indices and Standardized Parameters},
+    author = {Mattan S. Ben-Shachar and Daniel Lüdecke and Dominique Makowski},
+    year = {2020},
+    journal = {Journal of Open Source Software},
+    volume = {5},
+    number = {56},
+    pages = {2815},
+    publisher = {The Open Journal},
+    doi = {10.21105/joss.02815},
+    url = {https://doi.org/10.21105/joss.02815},
+  }
+
+@Article{modelbased,
+    title = {Estimation of Model-Based Predictions, Contrasts and Means.},
+    author = {Dominique Makowski and Mattan S. Ben-Shachar and Indrajeet Patil and Daniel Lüdecke},
+    journal = {CRAN},
+    year = {2020},
+    url = {https://github.com/easystats/modelbased},
+  }
+
+@Article{correlation,
+    title = {Methods and Algorithms for Correlation Analysis in R.},
+    author = {Dominique Makowski and Mattan S. Ben-Shachar and Indrajeet Patil and Daniel Lüdecke},
+    doi = {10.21105/joss.02306},
+    year = {2020},
+    journal = {Journal of Open Source Software},
+    number = {51},
+    volume = {5},
+    pages = {2306},
+    url = {https://joss.theoj.org/papers/10.21105/joss.02306},
+  }
